--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vtu",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build":"npm run install && npm install --prefix vtuf && npm run build --prefix vtuf"
   },
   "keywords": [],
   "author": "",
